Slider, dropdown, responsive, layout, utilities, rename "financement" page

--- a/src/pages/tarifs.astro
+++ b/src/pages/tarifs.astro
@@ -31,7 +31,7 @@ import PageHero from '../components/PageHero.astro';
 
     <Section>
         <div class="flex flex-col lg:flex-row justify-center gap-10 text-metal">
-            <div class="flex flex-col max-w-[450px] p-6 bg-light-purple border border-purple rounded-lg">
+            <div class="flex flex-col max-w-full lg:max-w-[450px] h-fit p-6 bg-light-purple border border-purple rounded-lg">
                 <h2 class="text-purple text-3xl mb-6">Les étapes</h2>
                 <p class="font-medium">
                     Suite à la visite technique de notre technicien à votre domicile et après quelques questions, notre bureau 
@@ -44,7 +44,7 @@ import PageHero from '../components/PageHero.astro';
                     adapté.
                 </p>
             </div>
-            <div class="flex flex-col max-w-[450px] p-6 bg-light-purple border border-purple rounded-lg">
+            <div class="flex flex-col max-w-full lg:max-w-[450px] h-fit p-6 bg-light-purple border border-purple rounded-lg">
                 <h2 class="text-purple text-3xl mb-6">Le coût</h2>
                 <p class="font-medium">
                     Mettre en place une borne de recharge à domicile engendre un certain coût, lequel sera conditionné par 
