Legals + footer logo

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -27,7 +27,7 @@ const subLinks = [
     <div class="bg-burgundy">
         <div class="wrapper flex flex-col gap-8 lg:gap-0 lg:flex-row justify-between lg:items-center">
             <div class="flex flex-col gap-2">
-                <a href="/" class="flex justify-center items-center w-[150px]">
+                <a href="/" class="flex justify-center items-center w-[90px] lg:w-[150px]">
                     <Image 
                         src="/img/logo/full_purple.svg" 
                         alt="Logo de Preezeo - la Borne qu’il vous faut!" 
