--- a/src/components/atom/Button.astro
+++ b/src/components/atom/Button.astro
@@ -88,7 +88,8 @@ button {
 		width: 100%;
 		height: 42px;
         padding: 0 25px;
-		overflow: hidden;
+		overflow: clip;
+		transition: .3s 2s ease-in-out;
 	}
 	span {
 		z-index: 1;
@@ -110,7 +111,7 @@ button {
 		}
 	}
 	&:hover {
-		background: var(--white);
+		background-color: var(--deep-blue);			
 		transition:.6s ease;
 		transition-delay: 0.6s;
 		&:after {
@@ -122,6 +123,11 @@ button {
 			border-radius: 0;
 			transform: translateY(0) scaleY(1);
 			transition-delay: 0;
+		}
+
+		& > div {
+			background-color: var(--deep-blue);			
+			transition: .3s .0s ease-in-out;
 		}
 		span {
 			&:first-child {
