--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,8 @@
 ---
 import '../styles/main.scss';
 import Image from '../components/atom/Image.astro';
-import Header from './Header.astro';
-import Footer from './Footer.astro';
 import { ViewTransitions } from 'astro:transitions';
+import ButtonContact from '../components/ButtonContact.astro';
 
 export interface Props {
 	title: string;
@@ -36,7 +35,6 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link rel="preload" as="font" href="/fonts/Alien.ttf" type="font/ttf" crossorigin="anonymous"/>
 		<link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" crossorigin="anonymous"/>
@@ -47,131 +45,33 @@ const { title } = Astro.props;
 		<link rel="preload" as="image" href="/img/logo/full_purple.svg" type="image/svg+xml" />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col bg-light text-metal font-montserrat text-base font-normal leading-[140%]">
-		<Header />	
-		<main class="">
+	<body class="flex flex-col bg-deep-blue text-white font-montserrat text-base font-normal leading-[140%]">
+		<header class="container mb-8 max-md:px-[5%]">
+			<nav class="flex justify-between items-center max-md:flex-wrap max-md:gap-10 py-4 lg:py-10">
+				<a href="/" class="max-md:order-1 max-md:max-w-[100px] flex items-center">
+					<Image src="/img/logo/full_purple.svg" alt="Logo Preezeo" c="max-w-[165px] h-auto" />
+				</a>
+				
+				<h1 class="max-md:order-3 font-alien uppercase text-center text-2xl"><span class="text-purple">La</span> <span class="text-yellow">borne</span> qu’il vous faut</h1>
+			
+				<ButtonContact c="max-md:order-2" />
+			</nav>
+		</header>
+		<main class="w-full flex flex-col gap-12 md:gap-52 xl:gap-[220px]">
 			<slot />
 		</main>
-		<div class="bg-container">
-			<Image 
-				src="/img/backgrounds/bg_shape_top.webp"
-				alt=""
-			/>
-			<Image 
-				src="/img/backgrounds/bg_shape_mid.webp"
-				alt=""
-			/>
-			<Image 
-				src="/img/backgrounds/bg_shape_bot.webp"
-				alt=""
-			/>
-		</div>
-		<Footer />
+		<footer class="mt-20 py-8 px-8 lg:py-15 border border-purple">
+			<div class="flex flex-col max-md:items-center gap-8 container">
+				<a href="/" class="flex items-center">
+					<Image src="/img/logo/full_purple.svg" alt="Logo Preezeo" c="max-w-[165px] h-auto" />
+				</a>
+				<p class="text-lg max-md:text-center">57 avenue du Maréchal Juin 64200 Biarritz</p>
+			</div>
+		</footer>
 	</body>
 </html>
 
 <style lang="scss" is:global>
 	@use '../styles/_variables.scss' as *;
-
-	// html {
-	// 	font-size: 60%;
-	// 	@media screen and (min-width: 600px) {
-	// 		font-size: 70%;
-	// 	}
-	// 	@media screen and (min-width: 1024px) {
-	// 		font-size: 80%;
-	// 	}
-	// 	@media screen and (min-width: 1280px) {
-	// 		font-size: 90%;
-	// 	}
-	// 	@media screen and (min-width: 1340px) {
-	// 		font-size: 100%;
-	// 	}
-	// }
-	
-	body {
-		min-height: 100vh;
-		min-height: 100dvh;
-
-		&::-webkit-scrollbar {
-			width: .5vw;
-			border-radius: 99px;
-		}
-		&::-webkit-scrollbar-thumb {
-			border: .125vw #EEEFF2 solid;
-			border-radius: 99px;
-			background: #FFB800; 
-		}
-		&::-webkit-scrollbar-thumb:hover {
-			background: #e7a500; 
-		}
-		&::-webkit-scrollbar-track {
-			background: #eeeff200;
-		}
-	}
-
-	main {
-		flex: 1;
-		min-height: 80vh;
-		z-index: 50;
-		//min-height: 5000px;
-	}
-
-	header {
-		
-	}
-
-	main, footer, header {
-		position: relative;
-	}
-
-	footer > *, header {
-		padding: 35px 0;
-
-		@media screen and (min-width: 1024px) {
-			padding: 35px 0;
-		}
-
-		@media screen and (min-width: 1280px) {
-			padding: 50px 0;
-		}
-	}
-
-	.wrapper {
-
-	}
-
-	.bg-container {
-		@include flex(flex-start, center, column, $gap:10vh);
-		@include position(0, 0, $position: absolute);
-		pointer-events: none;
-		padding-top: 90px;
-		z-index: -1;
-		overflow: hidden;
-		max-height: 100%;
-		width: 100%;
-
-		img {
-			&:nth-child(1) {
-				width: 100%;
-				@media screen and (min-width: 760px) {
-					width: 80%;
-				}
-			}
-			&:nth-child(2) {
-				width: 100%;
-			}
-			&:nth-child(3) {
-				width: 100%;
-			}
-		}
-	}
-
-	.scrollbar-hide {
-		scrollbar-width: none;
-		&::-webkit-scrollbar {
-			display: none;
-		}
-	}
 
 </style>
