Modale component init

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Image from "../components/atom/Image.astro";
 import Layout from "../layouts/Layout.astro";
 import ButtonContact from '../components/ButtonContact.astro';
+import Modale from '../components/Modale.vue';
 --- 
 
 <Layout title="Preezeo la borne qu'il vous faut !">
@@ -26,7 +27,6 @@ import ButtonContact from '../components/ButtonContact.astro';
     </section>
 
     <section class="overflow-x-clip max-w-[1400px] lg:mx-auto">
-
         <div class="card-scroller flex justify-start items-stretch gap-8 w-full overflow-x-scroll overflow-y-clip pb-8 snap-x snap-mandatory snap-always px-[5%]">
 
             <a href="#" class="card">
@@ -107,7 +107,6 @@ import ButtonContact from '../components/ButtonContact.astro';
                 </div>
             </a>
         </div>
-
     </section>
 
     <section class="container max-md:px-[5%]">
