--- a/src/components/atom/Button.astro
+++ b/src/components/atom/Button.astro
@@ -5,14 +5,16 @@ export interface Props {
     type?: 'button' | 'submit',
     fullWidth?: boolean,
     outlined?: boolean,
+	c?: string;
 }
 
-const {fullWidth, text, color = 'blue', outlined = false, type = 'button' } = Astro.props;
+const {c, fullWidth, text, color = 'blue', outlined = false, type = 'button'} = Astro.props;
 ---
 
 <button 
     class:list={`flex items-center justify-center 
-    ${color} ${outlined ? 'outlined' : ''} ${fullWidth ? 'w-full' : 'w-fit'}`}
+    	${color} ${outlined ? 'outlined' : ''} ${fullWidth ? 'w-full' : 'w-fit'} ${c}`
+	}
     type={type}
 >
 <div>
@@ -69,7 +71,7 @@ button {
 		@include position(0,0);
 		width: 100%;
 		height: 100%;
-		background: var(--light);
+		background: var(--deep-blue);
 		border-radius: 50% 50% 0 0;
 		transform: translateY(100%) scaleY(0.5);
 		transition: .6s ease;
