--- a/src/components/atom/Image.astro
+++ b/src/components/atom/Image.astro
@@ -28,6 +28,7 @@ img {
     display: block;
     width: 100%;
     height: 100%;
+    max-height: 100%;
 
     &.visibility {
         content-visibility: auto;
