--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -320,11 +320,17 @@ modaleTriggers.forEach((trigger) => {
     trigger.addEventListener('click', () => {
         openModal(trigger.getAttribute('data-modale-trigger'))
     });
+    trigger.addEventListener('touchstart', () => {
+        openModal(trigger.getAttribute('data-modale-trigger'))
+    });
 });
 
 modaleCLosers.forEach((closer) => {
     closer.addEventListener('click', () => {
         closeModal(closer.getAttribute('data-modale-close'))
+    });
+    closer.addEventListener('touchstart', () => {
+        openModal(closer.getAttribute('data-modale-trigger'))
     });
 });
 
