--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -320,7 +320,7 @@ modaleTriggers.forEach((trigger) => {
     trigger.addEventListener('click', () => {
         openModal(trigger.getAttribute('data-modale-trigger'))
     });
-    trigger.addEventListener('touchstart', () => {
+    trigger.addEventListener('touchend', () => {
         openModal(trigger.getAttribute('data-modale-trigger'))
     });
 });
@@ -329,8 +329,8 @@ modaleCLosers.forEach((closer) => {
     closer.addEventListener('click', () => {
         closeModal(closer.getAttribute('data-modale-close'))
     });
-    closer.addEventListener('touchstart', () => {
-        openModal(closer.getAttribute('data-modale-trigger'))
+    closer.addEventListener('touchend', () => {
+        closeModal(closer.getAttribute('data-modale-close'))
     });
 });
 
@@ -541,7 +541,7 @@ copyButtons.forEach((button) => {
                 </p>
             </article>
 
-            <div data-modale-trigger="11">
+            <div data-modale-trigger="11" tabindex="0">
                 <Button
                     c="justify-self-end ml-auto mt-4"
                     text="Nous contacter"
